...
        /// Delete user from online database
        case deleteUser
        /// Names of the settings items to show in user interface
        internal var name: String {
            switch self {
            case .logOut:
                return "Log Out"
            case .deleteUser:
                return "Delete User"
            }
        }
    }
}

